# sway-workspace-indexer

./: Cargo.toml  flake.nix
src/: get_apps.rs  main.rs  new_ws.rs  switch_them.rs  types.rs
